--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,6 +19,16 @@
   }
 }
 
+.message-error{
+  background-color: red;
+  color: white;
+  opacity: 0;
+  transition: all linear 0.5s;
+  &.invalid{
+    opacity: 1;
+  }
+}
+
 @media screen and (min-width: 40em) {
   .products--grid {
     display: grid;
