--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,24 @@
+<h1>Form</h1>
+
+<form (ngSubmit)="onRegister()" #myForm="ngForm">
+  <div class="input-group">
+    <label for="name">Nombre</label>
+    <input type="text" id="name" [(ngModel)]="register.name" placeholder="Gian Carlos" required name="name">
+    <p>Mensajes de error</p>
+  </div>
+  <div class="input-group">
+    <label for="email">Email</label>
+    <input type="text" id="email" [(ngModel)]="register.email" placeholder="Gian Carlos" required name="email">
+    <p>Mensajes de error</p>
+  </div>
+  <div class="input-group">
+    <label for="password">Password</label>
+    <input type="text" id="password" [(ngModel)]="register.password" placeholder="Gian Carlos" required name="password">
+    <p>Mensajes de error</p>
+  </div>
+  <button type="submit" [disabled]="myForm.invalid">Registar</button>
+</form>
+
 <h1>Class y Style</h1>
 <input type="text" required #nameInput2="ngModel" [(ngModel)]="person.name" placeholder="ss">
 <p class="message-error" [class.invalid]="nameInput2.invalid">El campo es requerido</p>
