--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <input type="text" placeholder="Img" [(ngModel)]="img">
 <app-img [img]="img" (imgLoaded)="onLoaded($event)"></app-img>
 
-<h1>Form</h1>
+<app-product [product]="product" *ngFor="let product of products"></app-product>
+
 <!--
 <form (ngSubmit)="onRegister()" #myForm="ngForm">
   <div class="input-group">
