--- a/src/app/components/img/img.component.html
+++ b/src/app/components/img/img.component.html
@@ -1,4 +1,5 @@
 <img [src]="img" width="200" (load)="imgLoad()" (error)="imgError()" *ngIf="img; else elseImg" alt="">
+<h3>{{ counter }}</h3>
 <ng-template #elseImg>
   <img [src]="imgDefault" alt="">
 </ng-template>
