agregando menu nav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,76 +1,4 @@
-<input type="text" placeholder="Img" [(ngModel)]="img">
-<app-img [img]="img" (imgLoaded)="onLoaded($event)"></app-img>
-
-<app-product [product]="product" *ngFor="let product of products"></app-product>
-
-<!--
-<form (ngSubmit)="onRegister()" #myForm="ngForm">
-  <div class="input-group">
-    <label for="name">Nombre</label>
-    <input type="text" id="name" [(ngModel)]="register.name" placeholder="Gian Carlos" required name="name">
-    <p>Mensajes de error</p>
-  </div>
-  <div class="input-group">
-    <label for="email">Email</label>
-    <input type="text" id="email" [(ngModel)]="register.email" placeholder="Gian Carlos" required name="email">
-    <p>Mensajes de error</p>
-  </div>
-  <div class="input-group">
-    <label for="password">Password</label>
-    <input type="text" id="password" [(ngModel)]="register.password" placeholder="Gian Carlos" required name="password">
-    <p>Mensajes de error</p>
-  </div>
-  <button type="submit" [disabled]="myForm.invalid">Registar</button>
-</form>
-
-<h1>Class y Style</h1>
-<input type="text" required #nameInput2="ngModel" [(ngModel)]="person.name" placeholder="ss">
-<p class="message-error" [class.invalid]="nameInput2.invalid">El campo es requerido</p>
-<label for="">Nombre</label>
-<input type="text" required #nameInput3="ngModel" [(ngModel)]="person.name" placeholder="ss">
-<p [style.font-style]="nameInput3.invalid ? 'italic' : 'normal'"> TExte texto</p>
-<hr>
-<h1>ngFor objs</h1>
-
-<div class="products--grid">
-  <div *ngFor="let product of products">
-    <img [src]="product.image" alt="image">
-    <h2>{{ product.price }}</h2>
-    <p>{{ product.name }}</p>
-  </div>
-</div>
-
-<h1>NgModel</h1>
-
-<p>Nombre: {{ person.name }} </p>
-<input type="text" required #nameInut="ngModel" [(ngModel)]="person.name" placeholder="ss">
-<p>valid:  {{ nameInut.valid }}</p>
-<p>Age: {{ person.age }} </p>
-<input type="number" max="18" min="10" required #ageInut="ngModel" [(ngModel)]="person.age" placeholder="ss">
-<h1>Eventos</h1>
-<p>valid:  {{ ageInut.valid }}</p>
-<button [disabled]="btnDisabled">Enviar</button>
-<button (click)="toggleButton()">Toggle Button</button>
-<p>Edad {{ person.age }}</p>
-<button (click)="increaseAge()">Age ++</button>
-<div class="box" (scroll)="onScroll($event)">
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur commodi dolore asperiores sed officia, ipsam, repellat ut fugit eius natus ratione ullam? Commodi porro neque dolore explicabo? Necessitatibus, expedita tenetur.</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur commodi dolore asperiores sed officia, ipsam, repellat ut fugit eius natus ratione ullam? Commodi porro neque dolore explicabo? Necessitatibus, expedita tenetur.</p>
-</div>
-<hr>
-
-<input type="text" [value]="person.name" placeholder="Hola" (keyup)="changeName($event)" />
+<app-nav></app-nav>
+<app-products></app-products>
 
 
-<h1>Propiedades</h1>
-<button [disabled]="btnDisabled">Enviar</button>
-<input type="text" [value]="name" placeholder="Hola" />
-<progress max="100" [value]="age"></progress>
-<hr>
-<h1>Hola Mundo</h1>
-<h2>{{ 'Hola Mundo'.repeat(5) }}</h2>
-
-<p>3 + 3 = {{ 3 + 3 }}</p>
-
-<h3>Hola, soy {{ person.name }} y tengo {{ person.age }}</h3>
--->
