--- a/src/app/components/img/img.component.html
+++ b/src/app/components/img/img.component.html
@@ -1,5 +1,4 @@
-<img [src]="img" width="200" (load)="imgLoad()" (error)="imgError()" *ngIf="img; else elseImg" alt="">
-<h3>{{ counter }}</h3>
+<img [src]="img" (load)="imgLoad()" (error)="imgError()" *ngIf="img; else elseImg" alt="">
 <ng-template #elseImg>
   <img [src]="imgDefault" alt="">
 </ng-template>
