--- a/src/app/components/products/products.component.scss
+++ b/src/app/components/products/products.component.scss
@@ -1,13 +1,20 @@
 .products--grid{
   display: flex;
   flex-direction: column;
-  div {
-    img {
-      width: 100%;
-      border-radius: 10px;
-    }
-    h2{
-      margin: 0;
-    }
+}
+
+@media screen and (min-width: 40em) and (max-width: 60em) {
+  .products--grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 15px;
+  }
+}
+
+@media screen and (min-width: 61em) {
+  .products--grid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 15px;
   }
 }
