menu y comunicacion de padre a hijo

--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,6 +1,9 @@
+<p>La cantiad {{ myShoppingCart.length }}</p>
+<p>Total {{ total }}</p>
 <div class="products--grid">
   <app-product
     [product]="product"
     *ngFor="let product of products"
+    (onAddToCartClicked)="onAddToCart($event)"
   ></app-product>
 </div>
