--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,5 +1,6 @@
-<app-img [img]="product.image"></app-img>
+<app-img *ngIf="product.images.length > 0" [img]="product.images[0]"></app-img>
 <h2>{{ product.price | currency:'SOL' }}</h2>
-<p>{{ product.title | reverse }}</p>
+<p>{{ product.title }}</p>
 <p appHighlight>{{ product.description }}</p>
+<button (click)="onShowDetail()">Ver Detalle</button>
 <button (click)="onAddToCart()">Add Cart</button>
