--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,12 +1,28 @@
-<p>La cantiad {{ myShoppingCart.length }}</p>
-<p>Total {{ total }}</p>
-<p>Today: {{ today | date: 'short' }}</p>
-<p>Today: {{ date | timeAgo }}</p>
-<p>{{ 'Hola bascusa asa' | vocals }}</p>
+<button (click)="createNewProduct()">create</button>
+<button (click)="loadMoreProducts()">Loiad More</button>
 <div class="products--grid">
   <app-product
     [product]="product"
     *ngFor="let product of products"
     (onAddToCartClicked)="onAddToCart($event)"
+    (onShowDetailClicked)="onShowDetail($event)"
   ></app-product>
+</div>
+<div class="product-detail" [class.active]="showProductDetail">
+  <div *ngIf="product">
+    <button>Close</button>
+    <h1>{{ product.title }}</h1>
+    <swiper
+      [slidesPerView]="1"
+    >
+      <ng-template swiperSlide *ngFor="let img of product.images" >
+        <app-img [img]="img"></app-img>
+      </ng-template>
+    </swiper>
+
+
+    <p>{{ product.description }}</p>
+    <button (click)="updateProduct()">Editar</button>
+    <button (click)="deleteProduct()">Eliminar</button>
+  </div>
 </div>
