--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <app-nav></app-nav>
 <button (click)="createUser()">create usario</button>
+<button (click)="downloadPdf()">Descargar PDF</button>
+<input type="file" (change)="onUpload($event)" placeholder="File">
+<img *ngIf="imgUpl" [src]="imgUpl" alt="">
 <app-products></app-products>
 
 
