agregando not found

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
 <app-nav></app-nav>
+<router-outlet></router-outlet>
+<!--
+
 <button (click)="createUser()">create usario</button>
 <button (click)="downloadPdf()">Descargar PDF</button>
 <input type="file" (change)="onUpload($event)" placeholder="File">
 <img *ngIf="imgUpl" [src]="imgUpl" alt="">
 <app-products></app-products>
+-->
 
 
