--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -13,9 +13,10 @@
   <div class="side-menu" [ngClass]="{active: activeMenu}">
     <button (click)="toggleMenu()">Close</button>
     <ul>
-      <li><a href="">All</a></li>
-      <li><a href="">Clothes</a></li>
-      <li><a href="">Electronics</a></li>
+      <li><a routerLink="home">All</a></li>
+      <li *ngFor="let category of categories">
+        <a routerLinkActive="active" [routerLink]="['/category', category.id]" cla>{{ category.name }}</a>
+      </li>
     </ul>
   </div>
 </div>
@@ -26,9 +27,10 @@
         <img src="./assets/svg/logo_yard_sale.svg" alt="logo">
       </a>
       <ul>
-        <li><a href="">All</a></li>
-        <li><a href="">Clothes</a></li>
-        <li><a href="">Electronics</a></li>
+        <li><a routerLink="home">All</a></li>
+        <li *ngFor="let category of categories">
+          <a routerLinkActive="active" [routerLink]="['/category', category.id]">{{ category.name }}</a>
+        </li>
       </ul>
     </nav>
     <div class="info">
