--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,5 @@
-<app-products [products]="products" (loadMore)="OnLoadMoreProducts()"></app-products>
+<app-products
+  [products]="products"
+  (loadMore)="OnLoadMoreProducts()"
+  [productId]="productId"
+  ></app-products>
