--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,7 +1,12 @@
-<app-img *ngIf="product.images.length > 0" [img]="product.images[0]"></app-img>
+<a [routerLink]="['/product', product.id]">
+  <app-img *ngIf="product.images.length > 0" [img]="product.images[0]"></app-img>
+</a>
 <h2>{{ product.price | currency:'SOL' }}</h2>
 <p>{{ product.title }}</p>
 <p>{{ product?.taxes | currency:'SOL' }}</p>
 <p appHighlight>{{ product.description }}</p>
+<!--<
 <button (click)="onShowDetail()">Ver Detalle</button>
+-->
+<a routerLink="." [queryParams]="{product: product.id}">Ver detalle</a>
 <button (click)="onAddToCart()">Add Cart</button>
