--- a/src/app/website/components/nav/nav.component.html
+++ b/src/app/website/components/nav/nav.component.html
@@ -37,7 +37,8 @@
       <div class="account">
         <button *ngIf="!profile; else elseBlock" (click)="login()">Login</button>
         <ng-template #elseBlock>
-            {{ profile?.email }}
+            <a routerLink="/profile">{{ profile?.email }}</a>
+            <button (click)="logout()">Logout</button>
         </ng-template>
       </div>
       <div>
