--- a/src/app/website/pages/profile/profile.component.html
+++ b/src/app/website/pages/profile/profile.component.html
@@ -1,1 +1,6 @@
-<p>profile works!</p>
+<div *ngIf="user">
+  <h1>My Profile</h1>
+  <p>Name: {{ user.name }}</p>
+  <p>email: {{ user.email }}</p>
+  <p>rol: {{ user.role }}</p>
+</div>
