--- a/src/app/website/pages/profile/profile.component.html
+++ b/src/app/website/pages/profile/profile.component.html
@@ -3,4 +3,5 @@
   <p>Name: {{ user.name }}</p>
   <p>email: {{ user.email }}</p>
   <p>rol: {{ user.role }}</p>
+  <a *ngIf="user.role === 'admin'" routerLink="/cms">ir al Cms</a>
 </div>
